--- a/Fronted dev portfolio/index.html
+++ b/Fronted dev portfolio/index.html
@@ -35,6 +35,7 @@ I’m motivated to keep learning, improve my skills.</h3>
  </div>
 
   <div class="profile-box" style="color: aqua;">
+      <img src="assets/images/image.png" alt="My Image">
     <img src="pv.g/myphoto.jpg.png" alt="My Photo" class="profile-img">
 
     <div class="profile-info">
@@ -119,4 +120,5 @@ I’m motivated to keep learning, improve my skills.</h3>
 
 <script src="script.js"></script>
 </body>
+
 </html>
