Revise portfolio HTML with new content and layout
Updated the portfolio HTML structure and content.

--- a/Fronted dev portfolio/index.html
+++ b/Fronted dev portfolio/index.html
@@ -35,7 +35,7 @@ I’m motivated to keep learning, improve my skills.</h3>
  </div>
 
   <div class="profile-box" style="color: aqua;">
-    <img src="pv.g/myphoto.jpg.png" alt="My Photo" class="profile-img">
+      <img src="assets/images/image.png" alt="My Image">
 
     <div class="profile-info">
       <h3>S M Nafiul Islam</h3>
@@ -121,4 +121,5 @@ I’m motivated to keep learning, improve my skills.</h3>
 </body>
 
 </html>
+
 
